# additive-fft-reed-solomon

./: Cargo.toml  LICENSE  README.md  build.rs
gf2p8/: Cargo.toml
gf2p8/src/: bit_matrix.rs  field.rs  lib.rs  poly_11d.rs
rs/: Cargo.toml  build.rs
rs/benches/: encode_systematic_sharded.rs  recover_erasure_shards.rs
rs/src/: codec.rs  gf2p8lut.rs  kernel.rs  lib.rs  poly_11d_lut.rs  poly_arith.rs
rs/src/gf2p8/: avx512_impl.rs  generic.rs  mod.rs
rs/src/kernel/: avx512_impl.rs  gfni_kernel.rs  lut_kernel.rs  mod.rs
rs/src/poly_11d/: mod.rs
src/: lib.rs
src/gf2p8/: avx512_impl.rs  generic.rs  mod.rs
src/poly_11d/: mod.rs
