[package]
name = "additive-fft-reed-solomon"
version = "0.1.0"
edition = "2024"

[dependencies]
additive-fft-reed-solomon-gf2p8 = { path = "../gf2p8" }
cfg-if = "1.0"

[build-dependencies]
additive-fft-reed-solomon-gf2p8 = { path = "../gf2p8" }

[features]
default = ["compile_gfni"]
compile_gfni = []
compile_avx2 = []

# [lints.rust]
# unexpected_cfgs = { level = "warn", check-cfg = ["cfg(native_gfni)"] }
