[package]
name = "additive-fft-reed-solomon"
version = "0.1.2"
license = "MIT"
description = "Fast Reed-Solomon encode and decode algorithms based on additive FFT (Lin, Al Naffouri, Han)"
repository = "https://github.com/vkomenda/additive-fft-reed-solomon"
readme = "../README.md"
keywords = ["Reed-Solomon", "erasure", "error-correcting", "FEC", "FFT"]
categories = ["encoding"]
edition = "2024"

[dependencies]
additive-fft-reed-solomon-gf2p8 = { path = "../gf2p8", version = "0.1.1" }
cfg-if = "1.0"

[build-dependencies]
additive-fft-reed-solomon-gf2p8 = { path = "../gf2p8", version = "0.1.1" }

[dev-dependencies]
criterion = "0.8"
rand = "0.10"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "recover_erasure_shards"
harness = false

[[bench]]
name = "encode_systematic_sharded"
harness = false

[features]
default = ["compile_gfni"]
compile_gfni = []
#compile_avx2 = []
